alignment fixed

--- a/src/app/pages/dashboard/dashboard.scss
+++ b/src/app/pages/dashboard/dashboard.scss
@@ -59,7 +59,7 @@
 }
 
 .table-margin-top{
-  margin-top: 148px;
+  margin-top: 30px;
 }
 
 // .card > .card-body {
@@ -67,3 +67,9 @@
 //     height: 100%;
 //     background: #fff;
 // }
+
+.panel-box{
+  background: white;
+  height: 550px;
+  padding: 30px;
+}
