--- a/src/app/pages/dashboard/feed/feed.scss
+++ b/src/app/pages/dashboard/feed/feed.scss
@@ -217,5 +217,6 @@
 }
 
 .mail_padding{
-  padding-top: 36px;
+  padding-top: 12px;
+  height: 30px;
 }
