--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,4 +35,9 @@ label {
 }
 label.col-sm-12.label-control {
     margin-left: 19px;
+}select.form-control.input-sm.box{
+    margin-left: -13px;
+}
+select.form-control.input-sm.boxnew{
+    margin-left: -13px;
 }
